--- a/C04/ex02/Makefile
+++ b/C04/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: ebmarque <ebmarque@student.42porto.com     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/17 15:01:11 by ebmarque          #+#    #+#              #
-#    Updated: 2024/04/17 19:51:48 by ebmarque         ###   ########.fr        #
+#    Updated: 2024/04/17 20:36:14 by ebmarque         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,12 +14,13 @@ NAME = Animal
 CC = c++
 FLAGS = -Wall -Wextra -Werror -g -std=c++98
 
-SRC = 	src/Animal.cpp \
+SRC = 	src/AAnimal.cpp \
 		src/Cat.cpp \
 		src/main.cpp \
 		src/Dog.cpp \
 		src/WrongAnimal.cpp \
-		src/WrongCat.cpp
+		src/WrongCat.cpp \
+		src/Brain.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
