class implementations for ex03

--- a/C04/ex03/Makefile
+++ b/C04/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: ebmarque <ebmarque@student.42porto.com     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/17 20:44:02 by ebmarque          #+#    #+#              #
-#    Updated: 2024/04/17 20:48:25 by ebmarque         ###   ########.fr        #
+#    Updated: 2024/04/18 15:47:16 by ebmarque         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,8 +14,17 @@ NAME = interfaces
 CC = c++
 CFLAGS = -Wall -Werror -Wextra -g -std:c++98
 
-INC = 
-SRCS =
+INC = 	includes/AMateria.hpp \
+		includes/Cure.hpp \
+		includes/Ice.hpp \
+		includes/ICharacter.hpp \
+
+SRCS = 	src/AMateria.cpp \
+		src/Ice.cpp \
+		src/Cure.cpp \
+		src/main.cpp \
+		src/ICharacter.cpp \
+
 OBJS = (SRCS:.cpp=.o)
 
 all : $(NAME)
